--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,4 @@
 steps:
-  - name: "gcr.io/cloud-builders/git"
-    args: ["checkout", "forever"]
-
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["install"]
-
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["install", "forever", "-g"]
-
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["run", "start"]
+  - name: "gcr.io/cloud-builders/gcloud"
+    args: ["app", "deploy"]
+timeout: "1600s"
