--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,12 @@
 steps:
+  - name: node:10.15.1
+    entrypoint: npm
+    args: ["install"]
+  - name: node:10.15.1
+    entrypoint: npm
+    args: ["run", "create-env"]
+    env:
+      - "MY_SECRET_KEY=${_DB_PW}"
   - name: "gcr.io/cloud-builders/gcloud"
     args: ["app", "deploy"]
 timeout: "1600s"
