--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"dotenv": "^10.0.0",
 		"ejs": "^3.1.2",
 		"express": "^4.17.1",
+		"express-rate-limit": "^5.3.0",
 		"forever": "^4.0.1",
 		"lodash": "^4.17.15",
 		"mongoose": "^5.9.10",
