--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"forever": "^4.0.1",
 		"lodash": "^4.17.15",
 		"mongoose": "^5.9.10",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"nl2br": "^0.0.3"
 	}
 }
